# multi_Agent_ai_tool_with_java-backend_React_front

./: .gitignore  README.md  agent_engine.py  ai_poem.txt  main.py  pyproject.toml  tool.py
ai-agent-backend/: pom.xml
ai-agent-backend/src/main/java/com/aiagent/: AgentApplication.java
ai-agent-backend/src/main/java/com/aiagent/config/: CorsConfig.java  OllamaConfig.java  WebSocketConfig.java
ai-agent-backend/src/main/java/com/aiagent/controller/: AgentController.java  ConversationController.java  ToolController.java
ai-agent-backend/src/main/java/com/aiagent/model/: AgentTrace.java  ChatMessage.java  Conversation.java  ToolCall.java
ai-agent-backend/src/main/java/com/aiagent/repository/: ChatMessageRepository.java  ConversationRepository.java
ai-agent-backend/src/main/java/com/aiagent/service/: AgentService.java  ConversationService.java  OllamaService.java  ToolExecutorService.java
ai-agent-backend/src/main/java/com/aiagent/tool/: AgentTool.java  FileWriterTool.java  SummarizerTool.java  WebSearchTool.java
ai-agent-backend/src/main/resources/: application-prod.yml  application.yml
ai-agent-frontend/: index.html  package-lock.json  package.json
ai-agent-frontend/src/: App.jsx  index.css
ai-agent-frontend/src/components/Chat/: AgentTrace.jsx  ChatInput.jsx  ChatWindow.jsx  MessageBubble.jsx
ai-agent-frontend/src/components/Layout/: Header.jsx  Sidebar.jsx
ai-agent-frontend/src/context/: AgentContext.jsx
ai-agent-frontend/src/pages/: ChatPage.jsx  DashboardPage.jsx  ToolsPage.jsx
ai-agent-frontend/src/services/: api.js
(+3 files in other folders)
